# horus

./: .gitignore  CLAUDE.md  Cargo.toml  install.sh
.github/workflows/: benchmarks.yml  ci.yml
benchmarks/benches/: link_performance.rs  production_messages.rs
docs-site/components/: DocsSidebar.tsx
docs-site/public/: search-index.json
horus/: Cargo.toml
horus/src/: lib.rs
horus_core/: Cargo.toml
horus_core/examples/: link_motor_control.rs  network_production.rs  scheduler_api_patterns.rs
horus_core/src/: driver.rs  lib.rs  params.rs  terminal.rs
horus_core/tests/: acceptance_scheduler.rs  autonomous_robot_application.rs  jit_integration_test.rs  orchestration_integration_tests.rs  rt_node_test.rs  rt_scheduler_integration.rs
horus_library/: Cargo.toml
horus_library/examples/: hardware_sensors_demo.rs
horus_library/messages/: coordination.rs  diagnostics.rs  force.rs  mod.rs  navigation.rs  perception.rs  tensor.rs  timing.rs  vision.rs
horus_macros/src/: node.rs
horus_macros/tests/: node_macro_test.rs
horus_manager/: Cargo.toml
horus_manager/src/: dashboard.rs  dashboard_tui.rs  dependency_resolver.rs  graph.rs  main.rs  registry.rs
horus_manager/tests/: dashboard_api_tests.rs  param_api_tests.rs  symlink_tests.rs
horus_mcp/: README.md  package-lock.json  package.json
horus_mcp/src/: db.ts  index.ts
horus_py/horus/: __init__.py
horus_py/src/: hub.rs  lib.rs  link.rs  messages.rs  scheduler.rs
plugins/horus-imu-plugin/: Cargo.toml
plugins/horus-imu-plugin/src/: lib.rs  mpu6050_backend.rs  simulation.rs
scripts/: prerelease.sh
(+210 files in other folders)
